{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 20,
  "lineage": "bcb4f404-c5c5-468b-3f78-81c1f2046141",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mlflow_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07216ac99dc46a187",
            "arn": "arn:aws:ec2:ap-south-1:927340403996:instance/i-07afdd283109a8ed7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07afdd283109a8ed7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "mlflow-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04081e9de7d8e1091"
              }
            ],
            "primary_network_interface_id": "eni-04081e9de7d8e1091",
            "private_dns": "ip-10-10-1-27.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.27",
            "public_dns": "ec2-15-206-91-116.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.91.116",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d1973e20d407e7b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020c3b3a29b27386c",
            "tags": {
              "Name": "mlflow-server"
            },
            "tags_all": {
              "Name": "mlflow-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec87979c5bf19c53"
            ]
          },
          "dependencies": [
            "aws_key_pair.mlflow-key",
            "aws_security_group.mlflow_sg",
            "aws_subnet.mlflow_public_subnet",
            "aws_vpc.mlflow_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mlflow_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:927340403996:internet-gateway/igw-027f5c0e2d0cebd2f",
            "id": "igw-027f5c0e2d0cebd2f",
            "owner_id": "927340403996",
            "region": "ap-south-1",
            "tags": {
              "Name": "mlflow-igw"
            },
            "tags_all": {
              "Name": "mlflow-igw"
            },
            "vpc_id": "vpc-0f6bb3ce432f8a91e"
          },
          "dependencies": [
            "aws_vpc.mlflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mlflow_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:927340403996:route-table/rtb-0995fff88b8a781ab",
            "id": "rtb-0995fff88b8a781ab",
            "owner_id": "927340403996",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027f5c0e2d0cebd2f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mlflow-public-rt"
            },
            "tags_all": {
              "Name": "mlflow-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6bb3ce432f8a91e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mlflow_igw",
            "aws_vpc.mlflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mlflow_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0718c0841c01506a3",
            "region": "ap-south-1",
            "route_table_id": "rtb-0995fff88b8a781ab",
            "subnet_id": "subnet-020c3b3a29b27386c"
          },
          "dependencies": [
            "aws_internet_gateway.mlflow_igw",
            "aws_route_table.mlflow_public_rt",
            "aws_subnet.mlflow_public_subnet",
            "aws_vpc.mlflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mlflow_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:927340403996:security-group/sg-0ec87979c5bf19c53",
            "description": "Allow MLflow and SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec87979c5bf19c53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MLflow UI",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mlflow-sg",
            "name_prefix": "",
            "owner_id": "927340403996",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f6bb3ce432f8a91e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mlflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mlflow_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:927340403996:subnet/subnet-020c3b3a29b27386c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020c3b3a29b27386c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "927340403996",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "mlflow-public-subnet"
            },
            "tags_all": {
              "Name": "mlflow-public-subnet"
            },
            "vpc_id": "vpc-0f6bb3ce432f8a91e"
          },
          "dependencies": [
            "aws_vpc.mlflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mlflow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:927340403996:vpc/vpc-0f6bb3ce432f8a91e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0108063fa3b2cf42b",
            "default_route_table_id": "rtb-0f6246c8dc37c89dc",
            "default_security_group_id": "sg-090197ee9ffaf57ff",
            "dhcp_options_id": "dopt-01681720fcc22bc7d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f6bb3ce432f8a91e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f6246c8dc37c89dc",
            "owner_id": "927340403996",
            "region": "ap-south-1",
            "tags": {
              "Name": "mlflow-vpc"
            },
            "tags_all": {
              "Name": "mlflow-vpc"
            }
          }
        }
      ]
    }
  ]
}